# turtlebot2

./: .gitmodules  README.md
turtlebot2_description/: CMakeLists.txt  package.xml
turtlebot2_description/hooks/: resource_paths.dsv.in
turtlebot2_description/launch/: bringup_launch.py  description_launch.py  manual_launch.py  rviz_launch.py  upload_launch.py  world_launch.py
turtlebot2_description/scripts/: bringup.sh
turtlebot2_description/urdf/: hexagons.urdf.xacro  kobuki.urdf.xacro  turtlebot2.urdf.xacro
turtlebot2_description/urdf/common/: common_properties.urdf.xacro  gazebo.xacro
turtlebot2_description/urdf/sensors/: astra.urdf.xacro  hokuyo.urdf.xacro  kinect.urdf.xacro  r200.urdf.xacro  xtion_pro.urdf.xacro
