<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot2_description</name>
  <version>1.0.0</version>
  <description>
    Xacro syntax for Turtlebot2 models, plus some bringup scripts
  </description>
  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>simple_launch</exec_depend>
  <exec_depend>kobuki_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
